--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -19,4 +19,36 @@
 
 .App-link {
   color: #09d3ac;
+} */
+
+.app {
+  min-height: 100vh;
+  background: rgb(184, 184, 255);
+  
+}
+.div {
+    border: 2px solid black;
+
+}
+.tweet-styling {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.tweet {
+  height: 200px;
+  width: 200px;
+  background: white;
+  /* border: 2px solid black; */
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.red {
+  color: red;
+  /* font-size: 50px; */
 }
